--- a/app/src/main/res/layout/fragment_scrolling.xml
+++ b/app/src/main/res/layout/fragment_scrolling.xml
@@ -9,12 +9,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Event per category"
+            android:textStyle="italic"
+            android:textColor="@color/blue"/>
+
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/pieChart"
             android:layout_width="match_parent"
             android:layout_height="500dp"
             android:layout_marginBottom="20dp"
             />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Event by Status"
+            android:textStyle="italic"
+            android:textColor="@color/blue"/>
 
         <com.github.mikephil.charting.charts.BarChart
             android:id="@+id/barChart"
